# msp430-quickstart

./: Cargo.toml
examples/: blinky.rs
