[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
name = "msp430-quickstart"
version = "0.1.0"

[dependencies.msp430]
version = "0.1.0"

[dependencies.msp430-rt]
features = ["abort-on-panic"]
version = "0.1.0"

[dependencies.msp430-rtfm]
git = "https://github.com/japaric/msp430-rtfm"

[dependencies.msp430fr2433]
features = ["rt"]
path = "../msp430fr2433"

[profile.release]
lto = true
